# crawl4ai-mcp

./: .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  AUDIT-ci-build.md  AUDIT-docs.md  AUDIT-security.md  AUDIT-server-core.md  AUDIT-test-suite.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  replit.md  replit.nix  vercel.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml  mcp_compatibility.yml
.github/assets/img/favicon/: site.webmanifest
.github/workflows/: ci.yml  release.yml
crawl4ai_mcp/: __init__.py  server.py
docs/: .gitignore  package.json  pnpm-lock.yaml  vercel.json
docs/app/: layout.config.tsx  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/docs/: ApiExample.tsx  ComparisonTable.tsx  Hero.tsx
docs/components/home/: Footer.tsx  IntegrationExamples.tsx  WhySection.tsx
docs/components/ui/: Diagram.tsx
docs/content/docs/: api-reference.mdx  architecture.mdx  contributing.mdx  features.mdx  index.mdx  prd.mdx  roadmap.mdx
mcp_crawl4ai/: server.py
tests/: conftest.py  test_contract_lock.py  test_coverage_helpers.py  test_server.py
tests/manual/: README.md  test_live.py
